fix z-index of tabcontent, visitors, overlay

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
   height: 80%;
   width: 0;
   position: fixed;
-  z-index: 1;
+  z-index: 4;
   right: 0;
   background-color: #CD6528;
   overflow-x: hidden;
@@ -144,9 +144,9 @@ body {
 }
 
 .visitor {
-	width: 50px;
+  width: 50px;
   height: auto !important;
-  z-index: 5000 !important;
+  z-index: 3 !important;
   position: absolute;
 
 }
@@ -272,7 +272,7 @@ body {
   right: 0;
   bottom: 0;
   background-color: rgba(0,0,0,0.5);
-  z-index: 2;
+  z-index: 5;
   cursor: pointer;
 }
 
